--- a/src/Components/BackgroundSettings/BackgroundSettings.scss
+++ b/src/Components/BackgroundSettings/BackgroundSettings.scss
@@ -54,11 +54,11 @@
     }
     .BackgroundSettings__body {
         width: calc(100% - 10px);
-        height: calc(100% - 10px);
+        height: calc(100% - 40px);
         margin: 5px;
         display: flex;
         flex-direction: column;
-        justify-content: space-evenly;
+        justify-content: space-between;
         .BackgroundSettings__section {
             width: 100%;
             & > .BackgroundSettings__position {
@@ -85,7 +85,6 @@
                     width: 100%;
                     display: flex;
                     padding-bottom: 5px;
-                    border-bottom: $secondaryBorder;
                     & > div {
                         width: 50%;
                         display: flex;
@@ -107,15 +106,47 @@
         .BackgroundSettings__size {
             display: flex;
             justify-content: space-evenly;
-            & > button {
-                width: 16.6%;
-                background: red;
-            }
+            align-items: center;
             & > div {
-                height: 22px;
-                min-width: 16.6%;
+                width: 50%;
                 display: flex;
-                justify-content: center;
+                justify-content: space-evenly;
+                align-items: stretch;
+                & > button {
+                    display: flex;
+                    justify-content: space-around;
+                    width: 33.3%;
+                }
+                & > div {
+                    display: flex;
+                    height: 22px;
+                    justify-content: space-evenly;
+                }
+            }
+        }
+        .BackgroundSettings__repeat {
+            display: flex;
+            justify-content: space-between;
+            align-items: stretch;
+            button {
+                width: 15.5%;
+            }
+        }
+        .BackgroundSettings__color {
+            & > div {
+                width: 70px;
+                height: 25px;
+                border: $primaryBorder;
+            }
+        }
+        & > div:last-child {
+            display: flex;
+            justify-content: space-evenly;
+            button {
+                width: 15.5%;
+                &:last-child:hover {
+                    color: $warningTextColor;
+                }
             }
         }
     }
