--- a/src/Components/BackgroundSettings/BackgroundSettings.scss
+++ b/src/Components/BackgroundSettings/BackgroundSettings.scss
@@ -58,35 +58,47 @@
         margin: 5px;
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
         .BackgroundSettings__section {
             width: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+            &:first-child { height: 35%; }
+            &:nth-child(2) { height: 15%; }
+            &:nth-child(3) { height: 25%; }
+            &:nth-child(4) { height: 15%; }
+            &:nth-child(5) { height: 10%; }
             & > .BackgroundSettings__position {
                 width: 100%;
                 display: flex;
-                flex-direction: column;
                 & > div:first-child {
-                    padding: 5px 0;
-                    width: 100%;
+                    width: 50%;
                     display: flex;
-                    justify-content: space-between;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: space-evenly;
                     & > div { 
-                        width: 50%;
+                        width: 100%;
                         & > div {
+                            padding: 5px 0;
                             display: flex;
                             justify-content: space-evenly;
                             button {
-                                width: 30%;   
+                                width: 40%;   
                             }
                         }
                     }
                 }
                 & > div:last-child {
-                    width: 100%;
+                    width: 50%;
                     display: flex;
+                    flex-direction: column;
+                    justify-content: space-evenly;
+                    align-items: center;
                     padding-bottom: 5px;
                     & > div {
-                        width: 50%;
+                        width: 100%;
+                        height: 22px;
                         display: flex;
                         justify-content: center;
                     }
@@ -107,15 +119,10 @@
             justify-content: space-evenly;
             align-items: center;
             & > div {
-                width: 50%;
+                width: 100%;
                 display: flex;
                 justify-content: space-evenly;
                 align-items: stretch;
-                & > button {
-                    display: flex;
-                    justify-content: space-around;
-                    width: 33.3%;
-                }
                 & > div {
                     display: flex;
                     height: 22px;
@@ -125,10 +132,11 @@
         }
         .BackgroundSettings__repeat {
             display: flex;
-            justify-content: space-between;
-            align-items: stretch;
+            justify-content: space-evenly;
+            flex-wrap: wrap;
             button {
-                width: 15.5%;
+                width: 30%;
+                margin-bottom: 5px;
             }
         }
         .BackgroundSettings__color {
@@ -140,7 +148,9 @@
         }
         & > div:last-child {
             display: flex;
+            flex-direction: row;
             justify-content: space-evenly;
+            align-items: center;
             button {
                 width: 15.5%;
                 &:last-child:hover {
