--- a/src/Components/BackgroundSettings/BackgroundSettings.scss
+++ b/src/Components/BackgroundSettings/BackgroundSettings.scss
@@ -54,8 +54,8 @@
     }
     .BackgroundSettings__body {
         width: calc(100% - 10px);
-        height: calc(100% - 40px);
-        margin: 5px;
+        height: calc(100% - 30px);
+        margin: 0 5px;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -63,20 +63,25 @@
             width: 100%;
             display: flex;
             flex-direction: column;
-            justify-content: space-evenly;
+            justify-content: space-between;
             &:first-child { height: 35%; }
-            &:nth-child(2) { height: 15%; }
-            &:nth-child(3) { height: 25%; }
+            &:nth-child(2) { height: 20%; }
+            &:nth-child(3) { height: 30%; }
             &:nth-child(4) { height: 15%; }
-            &:nth-child(5) { height: 10%; }
-            & > div:first-child { 
+            & > div:first-child {
+                height: 30px;
+                margin-top: 5px;
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
-             }
+            }
+            & > div:last-child {
+                height: calc(100% - 22px);
+            }
             & > .BackgroundSettings__position {
                 width: 100%;
                 display: flex;
+                border-bottom: $tertiaryBorder;
                 & > div:first-child {
                     width: 50%;
                     display: flex;
@@ -118,6 +123,7 @@
             display: flex;
             justify-content: space-evenly;
             align-items: center;
+            border-bottom: $tertiaryBorder;
             & > div {
                 width: 100%;
                 display: flex;
@@ -133,17 +139,12 @@
         .BackgroundSettings__repeat {
             display: flex;
             justify-content: space-evenly;
+            align-items: center;
             flex-wrap: wrap;
+            border-bottom: $tertiaryBorder;
             button {
                 width: 30%;
                 margin-bottom: 5px;
-            }
-        }
-        .BackgroundSettings__color {
-            & > div {
-                width: 70px;
-                height: 25px;
-                border: $primaryBorder;
             }
         }
         & > div:last-child {
