--- a/src/Components/MainMenu/MainMenu.scss
+++ b/src/Components/MainMenu/MainMenu.scss
@@ -6,32 +6,50 @@
     left: 0;
     width: 100%;
     height: 100%;
-    padding: 5px;
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: column;
-    overflow-y: auto;
     background: $secondaryBackgroundColor;
-    & > div {
+    .MainMenu__options {
         width: 100%;
-        height: 14%;
-        border-bottom: $tertiaryBorder;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        &:last-child {
-            border: none;
-            button {
-                padding: 2px 30px;
+        height: 30px;
+        ul {
+            display: flex;
+            justify-content: flex-end;
+            list-style: none;
+            li {
+                width: 33.3%;
+                text-align: center;
             }
         }
     }
-    p {
-        color: $secondaryTextColor;
-        font-size: $medFont;
+    .MainMenu__saveMsg {
+        position: absolute;
+        top: 0;
+        left: 0;
         width: 100%;
+        height: 100%;
+        background: $secondaryBackgroundColor;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        color: $secondaryTextColor;
+        div {
+            width: 100%;
+            display: flex;
+            justify-content: space-evenly;
+            button {
+                width: 30%;
+            }
+        }
+        .storage-info {
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            span {
+                color: $tertiaryTextColor;
+            }
+        }
     }
-    button {
+    button, li {
         position: relative;
         height: 26px;
         padding: 0 10px;
@@ -49,10 +67,6 @@
             color: $activeButtonTextColor;
             text-shadow: 1px 1px black;
         }
-    }
-    span {
-        color: $tertiaryTextColor;
-        font-size: $xsmFont;
     }
     input {
         max-width: 140px;
