--- a/src/Components/MainMenu/MainMenu.scss
+++ b/src/Components/MainMenu/MainMenu.scss
@@ -10,17 +10,19 @@
         width: 27%;
         min-width: 100px;
         margin-left: auto;
+        margin-right: -1px;
         border-bottom: $tertiaryBorder;
         border-left: $tertiaryBorder;
+        border-right: $primaryBorder;
         box-shadow: 5px 5px 5px black;
         ul {
             display: flex;
             flex-direction: column;
             list-style: none;
             li {
-                height: 30px;
+                height: 32px;
                 width: 100%;
-                padding: 0 5px;
+                padding: 0;
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
@@ -30,36 +32,38 @@
                 &:hover { 
                     font-size: $smlFont; 
                     div {
-                        width: $lrgFont;
-                        height: $lrgFont;
+                        width: 28px !important;
+                        height: 20px;
                         border: none;
-                        border-bottom: $secondaryBorder;
-                        border-right: $secondaryBorder;
+                        border-bottom: $tertiaryBorder;
+                        border-right: $tertiaryBorder;
+                        border-top: 1px solid black;
+                        border-left: 1px solid black;
                         border-bottom-right-radius: 2px;
                     }
                     span {
-                        width: calc(100% - $smlFont);
-                        height: calc(100% - $smlFont);
-                        margin-right: calc($smlFont);
+                        width: 100%;
+                        height: 40%;
                     }
                 }
                 div {
-                    width: $lrgFont;
-                    height: $lrgFont;
+                    width: 28px !important;
+                    height: 20px;
+                    margin: 0 10px 0 5px;
                     background-position: center;
                     background-size: contain;
                     background-repeat: no-repeat;
-                    background-color: rgba(0, 0, 0, 0.5);
+                    background-color: rgba(0, 0, 0, 0.3);
                     border: none;
-                    border-top: $secondaryBorder;
-                    border-left: $secondaryBorder;
+                    border-top: $tertiaryBorder;
+                    border-left: $tertiaryBorder;
+                    border-bottom: 1px solid black;
+                    border-right: 1px solid black;
                     border-top-left-radius: 2px;
                 }
                 span {
-                    width: calc(100% - $medFont);
-                    height: calc(100% - $medFont);
-                    width: 80%;
-                    margin-right: calc($medFont);
+                    width: 100%;
+                    height: 60%;
                     display: flex;
                     justify-content: center;
                     align-items: center;
@@ -68,7 +72,7 @@
             }
         }
     }
-    .MainMenu__saveMsg {
+    .MainMenu__save-form, .MainMenu__new-form {
         position: absolute;
         top: 0;
         left: 0;
@@ -80,12 +84,16 @@
         justify-content: space-evenly;
         align-items: center;
         color: $secondaryTextColor;
+        p {
+            text-align: center;
+        }
         div {
             width: 100%;
             display: flex;
             justify-content: space-evenly;
             button {
                 width: 30%;
+
             }
         }
         .storage-info {
@@ -114,7 +122,11 @@
             background: $buttonGradientHover;
             color: $activeButtonTextColor;
             text-shadow: 1px 1px black;
+            font-size: $smlFont;
         }
+    }
+    h2 {
+        text-decoration: underline;
     }
     input {
         max-width: 140px;
