--- a/src/App.scss
+++ b/src/App.scss
@@ -53,7 +53,7 @@
     overflow-x: hidden;
     > div > header {
         width: 100%;
-        height: 30px;
+        height: 30px !important;
         max-height: 30px;
         background: $secondaryBackgroundColor;
         display: flex;
