--- a/src/Components/ResultDisplay/ResultDisplay.scss
+++ b/src/Components/ResultDisplay/ResultDisplay.scss
@@ -7,7 +7,7 @@
     flex-direction: column;
     .ResultDisplay__header {
         div {
-            height: 100%;
+            min-height: 30px;
             display: flex;
             justify-content: space-between;
             div {
@@ -38,7 +38,9 @@
     .ResultDisplay__checkered-bg, .ResultDisplay__color-bg {
         width: 100%;
     }
-    .ResultDisplay__checkered-bg { height: 93%; }
+    .ResultDisplay__checkered-bg { 
+        height: 93%;
+    }
     .ResultDisplay__color-bg { 
         position: relative;
         height: 100%;
