--- a/src/Components/Gallery/Gallery.scss
+++ b/src/Components/Gallery/Gallery.scss
@@ -1,16 +1,19 @@
 @import "../../constants/constants.scss";
 
 .Gallery {
-    width: 100%;
-    height: 100%;
+    width: calc(100% - 20px);
+    height: calc(100% - 20px);
+    margin: 10px;
     display: flex;
-    background: $tertiaryBackgroundColor;
     align-items: center;
+    background: $buttonGradientHover;
+    border-top: $tertiaryBorder;
+    border-bottom: $tertiaryBorder;
     overflow-x: auto;
     .Image {
-        min-width: 170px;
-        max-width: 170px;
-        height: 190px;
+        min-width: 200px;
+        width: 150px;
+        height: 80%;
         margin: 0 5px;
         border: $secondaryBorder;
         span {
@@ -45,7 +48,7 @@
         }
         div {
             width: 100%;
-            height: 170px;
+            height: calc(100% - 20px);
             cursor: pointer;
             div {
                 width: 100%;
