--- a/src/Components/MainMenu/MainMenu.scss
+++ b/src/Components/MainMenu/MainMenu.scss
@@ -70,21 +70,21 @@
             }
         }
     }
-    .MainMenu__open-form {
+    .MainMenu__open-dialog {
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
         background: $secondaryBackgroundColor;
-        display: flex;
-        flex-direction: column;
         color: $secondaryTextColor;
         h2 {
             text-align: center;
+            height: 30px;
         }
         .MainMenu__storage-predefined-toggle {
             width: 100%;
+            height: 26px;
             display: flex;
             list-style: none;
             li {
@@ -94,8 +94,57 @@
                 align-items: center;
             }
         }
+        & > div:last-child {
+            height: calc(100% - 56px);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
     }
-    .MainMenu__save-form, .MainMenu__new-form {
+    .MainMenu__delete-form {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: $secondaryBackgroundColor;
+        color: $secondaryTextColor;
+        h2 {
+            text-align: center;
+            height: 30px;
+        }
+        & > div {
+            display: flex;
+            height: calc(100% - 30px);
+            flex-direction: column;
+            align-content: space-between;
+            .delete-dialog {
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: space-evenly;
+                & > * {
+                    padding: 3px;
+                }
+                div span span {
+                    color: $tertiaryTextColor;
+                    font-family: "Fantasque";
+                }
+                input.partially-correct { color: $activeButtonTextColor; }
+                input.incorrect { color: $warningTextColor; }
+                input.correct { color: $codeGreen; }
+                button {
+                    min-width: 150px;
+                    margin: 0 5px;
+                }
+                button:hover { 
+                    font-size: $medFont; 
+                }
+            }
+        }
+    }
+    .MainMenu__save-form, .MainMenu__new-form, .MainMenu__open-form {
         position: absolute;
         top: 0;
         left: 0;
@@ -116,7 +165,7 @@
             justify-content: space-evenly;
             button {
                 width: 30%;
-
+                max-width: 150px;
             }
         }
         .storage-info {
