--- a/src/Components/ResultDisplay/ResultDisplay.scss
+++ b/src/Components/ResultDisplay/ResultDisplay.scss
@@ -43,6 +43,7 @@
     }
     .ResultDisplay__color-bg { 
         position: relative;
+        background-repeat: repeat;
         height: 100%;
     }
 }
