--- a/src/Components/Code/Code.scss
+++ b/src/Components/Code/Code.scss
@@ -4,6 +4,8 @@
     position: relative;
     width: 40%;
     height: 50%;
+    display: flex;
+    flex-direction: column;
     max-height: 50%;
     color: $primaryTextColor;
     background-image: $dottedImg;
@@ -37,14 +39,14 @@
     .Code__body {
         position: relative;
         width: 100%;
-        height: calc(100% - 40px);
+        height: calc(100% - 30px);
     }
     #code {
         height: 100%;
         max-height: 100%;
         max-width: 100%;
         overflow: auto;
-        margin: 5px;
+        margin: 0 5px;
         font-size: $smlFont;
         text-shadow: -1px -1px 2px black;
         code {user-select: auto;}
