--- a/src/Components/CodeSettings/CodeSettings.scss
+++ b/src/Components/CodeSettings/CodeSettings.scss
@@ -6,7 +6,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    padding: 5px;
+    padding: 0 5px;
     display: flex;
     justify-content: space-evenly;
     flex-direction: column;
