--- a/src/Components/RadialSettings/RadialSettings.scss
+++ b/src/Components/RadialSettings/RadialSettings.scss
@@ -64,9 +64,9 @@
         .RadialSettings__section {
             width: 100%;
             display: flex;
-            &:nth-child(1) { height: 10%; }
-            &:nth-child(2) { height: 30%; }
-            &:nth-child(3) { height: 60%; }
+            &:nth-child(1) { height: 15%; }
+            &:nth-child(2) { height: 42.5%; }
+            &:nth-child(3) { height: 42.5%; }
             &:not(:last-child) {
                 border-bottom: $primaryBorder;
             }
@@ -125,11 +125,10 @@
                 flex-direction: column;
                 justify-content: space-evenly;
                 align-items: center;
-                & > div:first-child, & > div:nth-child(2) {
+                & > div:first-child {
                     width: 100%;
-                    height: 40%;
+                    height: 65%;
                     padding: 5px;
-                    &:first-child { border-bottom: $primaryBorder; }
                     & > div {
                         height: 33.3%;
                         width: 100%;
@@ -165,7 +164,7 @@
                     justify-content: space-evenly;
                     align-items: center;
                     width: 100%;
-                    height: 20%;
+                    height: 35%;
                     div {
                         display: flex;
                         align-items: center;
