--- a/src/constants/constants.scss
+++ b/src/constants/constants.scss
@@ -27,13 +27,20 @@ $codeRed:                     #ef596f;
 $codePurple:                  #e56efd;
 $codeGreen:                   #bcffac;
 $codeGray:                    #474747;
-// GRADIENTS
+
+
+
+// ----------- GRADIENTS -----------
 $orangePinkGradient:            linear-gradient(-45deg,#e52e71, #fcca42);
 $buttonGradient:                linear-gradient(180deg, #1a1a1a 30%, #0c0c0c);
 $buttonGradientHover:           linear-gradient(180deg, #0c0c0c 30%, #1a1a1a);
 $buttonGradientLrg:             linear-gradient(180deg, #1a1a1a 50%, #0c0c0c 85%, #0c0c0c);
 $buttonGradientHoverLrg:        linear-gradient(180deg, #0c0c0c 15%, #1a1a1a 50%, #1a1a1a);
-// IMAGE URLS
+$anim1Gradient:                 linear-gradient(120deg, #e52e71, #fcca42, #e52e71);
+
+
+
+// ----------- IMAGE URLS -----------
 $dottedImg:                     url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAICAQAAABuBnYAAAAAU0lEQVQIHQXBwRGDIBAAwO2/AMcCDHAcPjIRxjJ8Je1kl1uqUgphsWu6w0sIG6npLpcUBql4e/wsVRKabrkNTacIYbMrwsF06rqUhsnXVKVT+Hj+Ue4rPSONk4kAAAAASUVORK5CYII=);
 
 
