--- a/src/Components/Animation/Animation.scss
+++ b/src/Components/Animation/Animation.scss
@@ -6,7 +6,35 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: $tertiaryBackgroundColor;
-    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: $secondaryBackgroundColor;
+    background-image: $dottedImg;
+    background-size: 100% 100%;
     z-index: 10000;
+    & > div {
+        width: 100vw;
+        display: flex;
+        justify-content: center;
+        background: $anim1Gradient;
+        background-clip: text;
+        color: transparent;
+        animation: hue 2s linear infinite;
+        & > span {
+            font-family: "Existence";
+            font-weight: lighter;
+            font-size: 70px;
+        }
+    }
+}
+
+@keyframes hue {
+    from {
+        background-position-x: 0vw;
+    }
+    to {
+        background-position-x: 100vw;
+    }
 }
