--- a/src/constants/constants.scss
+++ b/src/constants/constants.scss
@@ -36,7 +36,7 @@ $buttonGradient:                linear-gradient(180deg, #1a1a1a 30%, #0c0c0c);
 $buttonGradientHover:           linear-gradient(180deg, #0c0c0c 30%, #1a1a1a);
 $buttonGradientLrg:             linear-gradient(180deg, #1a1a1a 50%, #0c0c0c 85%, #0c0c0c);
 $buttonGradientHoverLrg:        linear-gradient(180deg, #0c0c0c 15%, #1a1a1a 50%, #1a1a1a);
-$anim1Gradient:                 linear-gradient(120deg, #e52e71, #fcca42, #e52e71);
+$anim1Gradient:                 linear-gradient(120deg, #e52e71, #bcffac, #e52e71);
 $anim2Gradient:                 linear-gradient(120deg, #4cc3f1, #fca266, #4cc3f1);
 $anim3Gradient:                 linear-gradient(120deg, #4cc3f1, #ff1493, #4cc3f1);
 
