reformat clipboard copy

--- a/src/Components/Code/Code.scss
+++ b/src/Components/Code/Code.scss
@@ -68,6 +68,7 @@
         }
         .ColorPreview {
             display: inline-block;
+            user-select: none;
             width: 12px;
             height: 12px;
             margin-right: 2px;
